.metadata/.plugins/org.eclipse.cdt.ui/DS18B20.build.log
23:06:04 **** Incremental Build of configuration Debug for project DS18B20 ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F103xB -c -I../Core/Inc -I../Drivers/STM32F1xx_HAL_Driver/Inc/Legacy -I../Drivers/STM32F1xx_HAL_Driver/Inc -I../Drivers/CMSIS/Device/ST/STM32F1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:113:20: warning: implicit declaration of function 'DS18B20_Start' [-Wimplicit-function-declaration]
  113 |         Presence = DS18B20_Start ();
      |                    ^~~~~~~~~~~~~
../Core/Src/main.c:114:9: warning: implicit declaration of function 'DS18B20_Write' [-Wimplicit-function-declaration]
  114 |         DS18B20_Write (0xCC);  // skip ROM
      |         ^~~~~~~~~~~~~
../Core/Src/main.c:121:20: warning: implicit declaration of function 'DS18B20_Read' [-Wimplicit-function-declaration]
  121 |         Temp_LSB = DS18B20_Read();
      |                    ^~~~~~~~~~~~
../Core/Src/main.c:124:9: error: 'Temperature' undeclared (first use in this function)
  124 |         Temperature = (float)Temp/16.0;  // resolution is 0.0625
      |         ^~~~~~~~~~~
../Core/Src/main.c:124:9: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c: In function 'DS18B20_Start':
../Core/Src/main.c:286:9: warning: implicit declaration of function 'uart_init' [-Wimplicit-function-declaration]
  286 |         uart_init(9600);
      |         ^~~~~~~~~
../Core/Src/main.c: At top level:
../Core/Src/main.c:294:6: warning: conflicting types for 'DS18B20_Write'; have 'void(uint8_t)' {aka 'void(unsigned char)'}
  294 | void DS18B20_Write (uint8_t data)
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:114:9: note: previous implicit declaration of 'DS18B20_Write' with type 'void(uint8_t)' {aka 'void(unsigned char)'}
  114 |         DS18B20_Write (0xCC);  // skip ROM
      |         ^~~~~~~~~~~~~
../Core/Src/main.c:311:9: error: conflicting types for 'DS18B20_Read'; have 'uint8_t(void)' {aka 'unsigned char(void)'}
  311 | uint8_t DS18B20_Read (void)
      |         ^~~~~~~~~~~~
../Core/Src/main.c:121:20: note: previous implicit declaration of 'DS18B20_Read' with type 'int()'
  121 |         Temp_LSB = DS18B20_Read();
      |                    ^~~~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

23:06:04 Build Failed. 3 errors, 5 warnings. (took 670ms)

